
Below is the change log for typical users. Minor and older changes stripped
away, please see git history for details.

- v0.6.3 (2025-xx-xx) (draw)     add image quad (v1.4.0)
                      (draw)     add draw callbacks
                      (starter)  added reverse z depth buffer support (v1.3.0)
                      (graphics) fix draw_indexed multiple index buffers (v1.5.1)
- v0.6.2 (2025-10-08) (draw) performance improvements
                      (draw) fix draw 3d plane issues
                      (draw) add text transforms
                      (job) main thread will be used when waiting on counter
- v0.6.1 (2025-09-26) (renderer) add iridescence support
                      (renderer) add linear & exp height fog
                      (renderer) add bloom
                      (renderer) add CSM blending
                      (renderer) add anisotropy support
                      (renderer) add clearcoat support
                      (renderer) add transmission support
                      (renderer) add volume transmission support
                      (renderer) add diffuse transmission support
                      (renderer) add index of refraction support
                      (renderer) add dispersion support
                      (renderer) add texture UV transforms
                      (renderer) add normal & emissive strength paramaters
                      (renderer) fix alpha mode support
                      (renderer) fix IBL filtering
                      (renderer) fix environment probe update schedule
                      (renderer) fix metal sync issues
                      (renderer) fix staging buffer size issues
                      (renderer) add first pass of environment probe blending
                      (draw)     fix draw layer cleanup
                      (draw)     fix draw scissor issue
                      (graphics) add events & raw pipeline barriers