@@ -60,7 +60,7 @@ the API is complete. It just means we won't break what currently exists.
 * Draw Backend        v1.1.0 (pl_draw_backend_ext.h)
 * DXT                 v1.0.0 (pl_dxt_ext.h)
 * GPU Allocators      v1.0.0 (pl_gpu_allocators_ext.h)
-* Graphics            v1.5.1 (pl_graphics_ext.h)
+* Graphics            v1.5.2 (pl_graphics_ext.h)
 * Image               v1.0.0 (pl_image_ext.h)
 * Job                 v2.2.0 (pl_job_ext.h)
 * Atomics             v1.0.0 (pl_platform_ext.h)
